# my-scrapper

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  LICENSE  PRD.md  Procfile  README.md  app.json  app.py  config.example.yaml  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.py  setup.py  vercel.json  what-i-want.md
.claude/: settings.local.json
.github/workflows/: ci.yml
src/site2md/: __init__.py
src/site2md/cli/: __init__.py  commands.py  config.py  main.py
src/site2md/crawl/: __init__.py  crawler.py  discovery.py  robots.py  url_manager.py
src/site2md/fetch/: __init__.py  http_client.py  playwright_client.py
src/site2md/process/: __init__.py  converter.py  extractor.py
src/site2md/storage/: __init__.py  filesystem.py  manifest.py
src/site2md/utils/: __init__.py  exceptions.py  logging.py  validation.py
src/site2md/web/: __init__.py  main.py
src/site2md/web/static/css/: styles.css
src/site2md/web/static/js/: app.js
src/site2md/web/templates/: index.html
tests/: __init__.py  conftest.py
tests/fixtures/: sample_sites.py
tests/integration/: test_crawl_flow.py
tests/unit/: test_config.py  test_validation.py
